--- a/clash_premium.yaml
+++ b/clash_premium.yaml
@@ -42,10 +42,10 @@ proxy-providers:
             enable: true
             url: http://www.gstatic.com/generate_204
             interval: 300
-    stt_mntech:
+    sst_mntech:
         type: http
-        path: ./stt_mntech.yaml
-        url: https://raw.githubusercontent.com/WUYUEZONG/Documents/d/stt_mntech.yaml
+        path: ./sst_mntech.yaml
+        url: https://raw.githubusercontent.com/WUYUEZONG/Documents/master/sst_mntech.yaml
         health-check:
             enable: true
             url: http://www.gstatic.com/generate_204
