--- a/clash_premium.yaml
+++ b/clash_premium.yaml
@@ -16,8 +16,8 @@ secret: ''
 proxy-providers:
     clash_jj_mntech:
         type: http
-        path: ./clash_jj_mntech.yaml
-        url: https://sub.id9.cc/sub?target=clash&new_name=true&url=https%3A%2F%2Fsubscribe.a9b.top%2Flink%2FqxbSc0AV3UKjyq06%3Fclash%3D1&insert=false&include=%F0%9F%8C%8F%7C%F0%9F%87%AD%F0%9F%87%B0&emoji=true&list=false&tfo=false&scv=false&fdn=false&sort=false
+        path: ./c_jj_ssr.yaml
+        url: https://suo.yt/1vqTk9D%9F%8C%8F%7C%F0%9F%87%AD%F0%9F%87%B0&emoji=true&list=false&tfo=false&scv=false&fdn=false&sort=false
         interval: 3600
         health-check:
             enable: true
