--- a/clash_premium.yaml
+++ b/clash_premium.yaml
@@ -17,7 +17,7 @@ proxy-providers:
     clash_jj_mntech:
         type: http
         path: ./c_jj_ssr.yaml
-        url: https://suo.yt/1vqTk9D%9F%8C%8F%7C%F0%9F%87%AD%F0%9F%87%B0&emoji=true&list=false&tfo=false&scv=false&fdn=false&sort=false
+        url: https://sub.id9.cc/sub?target=clash&new_name=true&url=https%3A%2F%2Fa.luxury%2Flink%2Fo4PGAk2vGIzZuLCW%3Fclash%3D2&insert=false&config=https%3A%2F%2Fcdn.jsdelivr.net%2Fgh%2FSleepyHeeead%2Fsubconverter-config%40master%2Fremote-config%2Fspecial%2Fbasic.ini&include=BGP%7CHiNet&emoji=true&list=false&tfo=false&scv=false&fdn=false&sort=false
         interval: 3600
         health-check:
             enable: true
