--- a/clash_premium.yaml
+++ b/clash_premium.yaml
@@ -26,7 +26,7 @@ proxy-providers:
     guagua_ss:
         type: http
         path: ./gua_tj.yaml
-        url: https://suo.yt/kOnUApH%9F%8C%8F%7C%F0%9F%87%AD%F0%9F%87%B0&emoji=true&list=false&tfo=false&scv=false&fdn=false&sort=false
+        url: https://sub.id9.cc/sub?target=clash&new_name=true&url=https%3A%2F%2Fsubscribe.a9b.top%2Flink%2FqxbSc0AV3UKjyq06%3Fclash%3D1&insert=false&include=%F0%9F%8C%8F%7C%F0%9F%87%AD%F0%9F%87%B0&emoji=true&list=false&tfo=false&scv=false&fdn=false&sort=false
         health-check:
             enable: true
             url: http://www.gstatic.com/generate_204
