--- a/clash_premium.yaml
+++ b/clash_premium.yaml
@@ -18,7 +18,7 @@ secret: ''
 proxy-providers:
     clash_jj_mntech:
         type: http
-        path: ./c_jj_ssr.yaml
+        path: ./jj_fliter.yaml
         url: https://sub.id9.cc/sub?target=clash&new_name=true&url=https%3A%2F%2Fa.luxury%2Flink%2Fo4PGAk2vGIzZuLCW%3Fclash%3D2&insert=false&config=https%3A%2F%2Fcdn.jsdelivr.net%2Fgh%2FSleepyHeeead%2Fsubconverter-config%40master%2Fremote-config%2Fspecial%2Fbasic.ini&include=BGP%7CHiNet&emoji=true&list=false&tfo=false&scv=false&fdn=false&sort=false
         interval: 3600
         health-check:
@@ -27,7 +27,7 @@ proxy-providers:
             interval: 300
     guagua_ss:
         type: http
-        path: ./gua_tj.yaml
+        path: ./gua_fliter.yaml
         url: https://sub.id9.cc/sub?target=clash&new_name=true&url=https%3A%2F%2Fsubscribe.a9b.top%2Flink%2FqxbSc0AV3UKjyq06%3Fclash%3D1&insert=false&include=%F0%9F%8C%8F%7C%F0%9F%87%AD%F0%9F%87%B0&emoji=true&list=false&tfo=false&scv=false&fdn=false&sort=false
         health-check:
             enable: true
@@ -35,16 +35,16 @@ proxy-providers:
             interval: 300
     yiyou_clash:
         type: http
-        path: ./yiyou_clash.yaml
-        url: https://gitee.com/rn-wyz/Documents/raw/d/yiyou_clash.yaml
+        path: ./yiyou_fliter.yaml
+        url: https://sub.id9.cc/sub?target=clash&new_name=true&url=https%3A%2F%2Fyiyocloud.com%2Flink%2FVfhPhDV3jyyNKBGD%3Fclash%3D1&insert=false&config=https%3A%2F%2Fcdn.jsdelivr.net%2Fgh%2FSleepyHeeead%2Fsubconverter-config%40master%2Fremote-config%2Fspecial%2Fbasic.ini&include=%E5%8F%B0%E6%B9%BE-%E4%B8%AD%E7%BB%A7%7C%E6%96%B0%E5%8A%A0%E5%9D%A1-%E4%B8%AD%E7%BB%A7%7C%E9%9F%A9%E5%9B%BD-%E4%B8%AD%E7%BB%A7&emoji=true&list=false&tfo=false&scv=false&fdn=false&sort=false
         health-check:
             enable: true
             url: http://www.gstatic.com/generate_204
             interval: 300
     sst_mntech:
         type: http
-        path: ./sst_mntech.yaml
-        url: https://gitee.com/rn-wyz/Documents/raw/d/sst_mntech.yaml
+        path: ./stt_fliter.yaml
+        url: https://sub.id9.cc/sub?target=clash&new_name=true&url=https%3A%2F%2Fsttsub.xyz%2Flink%2F8mljlCLSYhy8lnjs%3Fclash%3D1&insert=false&config=https%3A%2F%2Fcdn.jsdelivr.net%2Fgh%2FSleepyHeeead%2Fsubconverter-config%40master%2Fremote-config%2Fspecial%2Fbasic.ini&include=%E9%A6%99%E6%B8%AF%20%5BA-C%5D%7C%E5%8F%B0%E6%B9%BE%20%5BA-C%5D&emoji=true&list=false&tfo=false&scv=false&fdn=false&sort=false
         health-check:
             enable: true
             url: http://www.gstatic.com/generate_204
