--- a/.Trash/guagua_ss.yaml
+++ b/.Trash/guagua_ss.yaml
@@ -498,7 +498,6 @@ proxy-groups:
       - 🇮🇳 v1|印度|A|4台负载
       - 🇷🇺 v1|俄罗斯|A|3台负载
 rules:
- - DOMAIN,renzhe.cloud,🚀 节点选择
  - DOMAIN-SUFFIX,acl4.ssr,🎯 全球直连
  - DOMAIN-SUFFIX,ip6-localhost,🎯 全球直连
  - DOMAIN-SUFFIX,ip6-loopback,🎯 全球直连
@@ -1713,7 +1712,7 @@ rules:
  - DOMAIN-SUFFIX,act.qq.com,🍃 应用净化
  - DOMAIN-SUFFIX,ad.qun.qq.com,🍃 应用净化
  - DOMAIN-SUFFIX,adsfile.qq.com,🍃 应用净化
- #- DOMAIN-SUFFIX,bugly.qq.com,🍃 应用净化
+ - DOMAIN-SUFFIX,bugly.qq.com,🍃 应用净化
  - DOMAIN-SUFFIX,buluo.qq.com,🍃 应用净化
  - DOMAIN-SUFFIX,e.qq.com,🍃 应用净化
  - DOMAIN-SUFFIX,gdt.qq.com,🍃 应用净化
